test/libsolidity/syntaxTests/nameAndTypeResolution/523_reject_interface_creation.sol
interface I {}
contract C {
    function f() public {
        new I();
    }
}
// ----
// TypeError: (62-67): Cannot instantiate an interface.
